<resources>
    <string name="app_name">Share Happiness</string>
    <string name="action_settings">Settings</string>
    <string name="text_home">Home</string>
    <string name="text_profile">Profile</string>
    <string name="text_settings">No favorite users!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="donate_food">Donate Food</string>
    <string name="pickup_location">Pickup Location</string>
    <string name="title">Title</string>
    <string name="type">Type</string>
    <string name="details">Details</string>
    <string name="donate">Donate</string>
    <array name="departments">
        <item>Technical</item>
        <item>Support</item>
        <item>Research and Development</item>
        <item>Marketing</item>
        <item>Human Resource</item>
    </array>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- Error messages -->
    <string name="connection_error">Connection error</string>
    <string name="json_error">Error retrieving data</string>

    <!-- Actions -->
    <string name="action_refresh">Refresh</string>
    <string name="action_map">Map</string>
    <string name="action_directions">Directions</string>
    <string name="action_favorite">Favorite</string>
    <string name="action_my_location">My location</string>
    <string name="action_search">Search</string>

    <!-- Activities titles -->
    <string name="title_activity_stations_list">Stations</string>
    <string name="title_activity_station">Station</string>
    <string name="title_activity_networks_list">Choose a network</string>
    <string name="title_activity_map">Map</string>

    <!-- Welcome dialog -->
    <string name="welcome_dialog_message">
        Before you begin, please choose a bike network in the list.
        \nAlso make sure you are connected to the Internet.
    </string>
    <string name="welcome_dialog_ok">OK</string>
    <string name="welcome_dialog_cancel">Cancel</string>
    <string name="welcome_dialog_title">Welcome</string>

    <!-- Map -->
    <string name="location_not_found">Location not found</string>
    <string name="network_selected">selected</string>
    <string name="bike_network_downloading">Please wait while bike network is being downloaded</string>

    <!-- Widget -->
    <string name="widget_title_favorite_stations">Favorite stations</string>
    <string name="widget_no_fav_stations">No favorite stations</string>

    <!-- Various -->
    <string name="free_bikes">Free bikes:\u00A0</string>
    <string name="empty_slots">Empty slots:\u00A0</string>
    <string name="all_stations">All stations</string>
    <string name="favorite_stations">Favorites</string>
    <string name="nearby_stations">Nearby</string>
    <string name="no_stations">No stations</string>
    <string name="no_favorite_stations">No favorite stations</string>
    <string name="no_nearby_stations">No nearby stations</string>
    <string name="station_added_to_favorites">Station added to favorites</string>
    <string name="stations_removed_from_favorites">Station removed from favorites</string>
    <string name="no_nav_application">You don\'t have any navigation application installed</string>
    <string name="is_bonus_station">Bonus station</string>
    <string name="cards_accepted">Cards accepted</string>
    <string name="db_last_update">Last update: %1$s</string>
    <string name="db_last_update_never">never</string>
    <string name="updated_just_now">Just now</string>
    <plurals name="updated_minutes_ago">
        <item quantity="one">%d minute ago</item>
        <item quantity="other">%d minutes ago</item>
    </plurals>
    <plurals name="updated_hours_ago">
        <item quantity="one">%d hour ago</item>
        <item quantity="other">%d hours ago</item>
    </plurals>
    <plurals name="updated_days_ago">
        <item quantity="one">%d day ago</item>
        <item quantity="other">%d days ago</item>
    </plurals>

    <!-- Settings -->
    <string name="pref_title_bike_networks_list">Choose a network</string>
    <string name="pref_title_license">License</string>
    <string name="pref_title_license_message" translatable="false">
        OpenBikeSharing
        \nCopyright &#169; 2014-2015 Bruno Parmentier\n

        \nThis program is free software: you can redistribute it and/or modify
        it under the terms of the GNU General Public License as published by
        the Free Software Foundation, either version 3 of the License, or
        (at your option) any later version.\n

        \nThis program is distributed in the hope that it will be useful,
        but WITHOUT ANY WARRANTY; without even the implied warranty of
        MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
        GNU General Public License for more details.\n

        \nYou should have received a copy of the GNU General Public License
        along with this program.  If not, see &lt;http://www.gnu.org/licenses/&gt;.\n
    </string>
    <string name="pref_title_about">About</string>
    <string name="pref_title_website">Website</string>
    <string name="pref_title_source_code">Source code</string>
    <string name="pref_title_developers_website">Developer\'s website</string>
    <string name="pref_title_donate_bitcoin">Donate Bitcoin</string>
    <string name="pref_title_citybikes_api">CityBikes API</string>
    <string name="pref_title_osmdroid_library">osmdroid library</string>
    <string name="pref_title_osmbonuspack_library">OSMBonusPack library</string>
    <string name="pref_title_openstreetmap">OpenStreetMap</string>
    <string name="pref_title_version">Version</string>
    <string name="pref_map_layer_title">Map layer</string>
    <string name="pref_map_layer_mapnik" translatable="false">Mapnik</string>
    <string name="pref_map_layer_cyclemap" translatable="false">OpenCycleMap</string>
    <string name="pref_map_layer_osmpublictransport" translatable="false">OSMPublicTransport</string>
    <string name="pref_title_strip_station_id">Strip station ID</string>
    <string name="pref_title_strip_station_id_summary">
        Remove ID from station name (only useful for some networks)
    </string>
    <string name="pref_title_advanced">Advanced</string>
    <string name="pref_title_api_url">API URL</string>
    <string name="pref_title_default_tab">Default tab</string>


    <string name="default_gallery_storage">My Videos</string>
    <string name="title_auto_upload">Auto upload</string>
    <string name="summary_upload_over_wifi">Upload the videos when wifi is available</string>
    <string name="title_upload_quality">Upload Quality</string>
    <string name="summary_upload_video_quality">Specify video quality for uploads</string>
    <string name="pref_title_notifications">Notifications</string>
    <string name="summary_choose_ringtone">Choose notification sound</string>
    <string name="pref_header_about">About</string>
    <string name="summary_about">We are a team of like-minded people, specialized in development of Android App Development creating new trends across the app space. Glad to Help in anyway!</string>
    <string name="app_version">3.5</string>
    <string name="summary_support">Got any queries? We are happy to help!</string>
    <string name="title_send_feedback">Send Feedback</string>
    <string name="title_faq">FAQ</string>
    <string name="summary_faq">View frequently asked questions</string>
    <string name="url_faq">https://www.androidhive.info/privacy-policy/</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="url_privacy">https://www.androidhive.info/privacy-policy/</string>
    <string name="title_terms">Terms &amp; Conditions</string>
    <string name="url_terms">https://www.androidhive.info/terms-of-service/</string>
    <string name="title_version">Version</string>
    <string name="choose_email_client">Choose email client</string>
    <string name="title_gallery_storage">Default Storage</string>
    <string name="title_new_notification_sound">New message notification</string>
    <string name="title_vibrate">Vibrate</string>
    <string name="summary_vibrate">Vibrate on new notification</string>
    <string name="key_upload_over_wifi">key_upload_over_wifi</string>
    <string name="key_gallery_name">key_gallery_name</string>
    <string name="key_upload_quality">key_upload_quality</string>
    <string name="notifications_new_message">notifications_new_message</string>
    <string name="key_notifications_new_message_ringtone">key_notifications_new_message_ringtone</string>
    <string name="key_vibrate">key_vibrate</string>
    <string name="key_send_feedback">key_send_feedback</string>
</resources>
