<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rajon.sharehappiness.DonateActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="487dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_marginBottom="12dp"
            android:text="@string/donate_food"
            android:textAlignment="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textSize="36sp" />

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:hint="@string/title"
            android:inputType="" />

        <EditText
            android:id="@+id/editTextSalary"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:hint="@string/type"
            android:inputType="" />

        <EditText
            android:id="@+id/editTextSalary3"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:hint="@string/details"
            android:inputType="" />

        <EditText
            android:id="@+id/editTextSalary2"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:hint="@string/pickup_location"
            android:inputType="" />

        <Button
            android:id="@+id/buttonAdd"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:text="@string/donate"
            android:textSize="24sp" />

    </LinearLayout>

</RelativeLayout>